--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,21 @@
             "Kiboko\\Component\\ETL\\Pipeline\\": ""
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "unit\\Kiboko\\Component\\ETL\\Pipeline\\": "unit/"
+        }
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
     },
     "require-dev": {
-        "phpspec/phpspec": "^5.1"
+        "php-xdebug": "*",
+        "phpspec/phpspec": "^5.1",
+        "phpunit/phpunit": "^7.0",
+        "johnkary/phpunit-speedtrap": "^3.1@dev",
+        "mybuilder/phpunit-accelerator": "dev-master"
     }
 }
