--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "php-etl/contracts": "0.1.x-dev",
-        "php-etl/bucket": "0.1.x-dev",
+        "php-etl/pipeline-contracts": "0.1.x-dev",
+        "php-etl/bucket-contracts": "0.1.x-dev",
         "psr/log": "^1.1@dev"
     },
     "autoload": {
