--- a/.phpspec.yml
+++ b/.phpspec.yml
@@ -1,5 +1,5 @@
 suites:
   acme_suite:
-    namespace: Kiboko\Component\ETL\Pipeline
-    psr4_prefix: Kiboko\Component\ETL\Pipeline
+    namespace: Kiboko\Component\Pipeline
+    psr4_prefix: Kiboko\Component\Pipeline
     src_path: '%paths.config%'
