--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,23 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "php-etl/pipeline-contracts": "0.1.x-dev",
         "psr/log": "^1.1@dev",
-        "php-etl/bucket": "0.1.x-dev",
-        "php-etl/bucket-contracts": "0.1.x-dev"
+        "php-etl/bucket": "^0.1.0",
+        "php-etl/pipeline-contracts": "^0.1.0",
+        "php-etl/bucket-contracts": "^0.1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0",
+        "johnkary/phpunit-speedtrap": "*",
+        "mybuilder/phpunit-accelerator": "*",
+        "phpunit/php-invoker": "*",
+        "fzaninotto/faker": "^1.9@dev",
+        "phpspec/phpspec": "^7.0",
+        "friends-of-phpspec/phpspec-code-coverage": "*"
     },
     "autoload": {
         "psr-4": {
-            "Kiboko\\Component\\Pipeline\\": ""
+            "Kiboko\\Component\\Pipeline\\": "src/"
         }
     },
     "autoload-dev": {
@@ -35,12 +44,5 @@
         "branch-alias": {
             "dev-master": "0.2.x-dev"
         }
-    },
-    "require-dev": {
-        "ext-xdebug": "*",
-        "phpspec/phpspec": "^5.1",
-        "phpunit/phpunit": "^7.0",
-        "johnkary/phpunit-speedtrap": "^3.1@dev",
-        "mybuilder/phpunit-accelerator": "dev-master"
     }
 }
