--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,9 @@
             "unit\\Kiboko\\Component\\ETL\\Pipeline\\": "unit/"
         }
     },
+    "config": {
+        "bin-dir": "bin"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.2.x-dev"
