--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0",
-        "psr/log": "^1.1@dev",
+        "psr/log": "^3.0",
         "php-etl/bucket": "^0.2.0",
         "php-etl/pipeline-contracts": "^0.3.0",
         "php-etl/bucket-contracts": "^0.1.0"
@@ -26,10 +26,10 @@
         "phpunit/phpunit": "^9.0",
         "johnkary/phpunit-speedtrap": "*",
         "mybuilder/phpunit-accelerator": "*",
-        "phpunit/php-invoker": "*",
-        "fzaninotto/faker": "^1.9@dev",
-        "phpspec/phpspec": "^7.0",
-        "friends-of-phpspec/phpspec-code-coverage": "*"
+        "phpunit/php-invoker": "*"
+    },
+    "provide": {
+        "php-etl/pipeline-implementation": "0.3.0"
     },
     "autoload": {
         "psr-4": {
