Updated psr/log to ^1.1

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0",
-        "psr/log": "^1.1@dev",
+        "psr/log": "^1.1",
         "php-etl/bucket": "^0.2.0",
         "php-etl/pipeline-contracts": "^0.3.0",
         "php-etl/bucket-contracts": "^0.1.0"
