--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -1,59 +1,37 @@
-name: Quality (PHPStan level 4)
+name: Quality (PHPStan level 3)
 on: push
 jobs:
   cs-fixer:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Cs-Fixer
-        run: |
-            wget -q https://cs.symfony.com/download/php-cs-fixer-v2.phar -O php-cs-fixer
-            chmod a+x php-cs-fixer
-            PHP_CS_FIXER_IGNORE_ENV=true ./php-cs-fixer fix src --dry-run
-
-  phpunit:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
-          tools: composer:v2
-          coverage: pcov
-      - uses: actions/cache@v2
-        with:
-          path: '**/vendor'
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-      - uses: php-actions/composer@v5
-        with:
-          args: --prefer-dist
-          php_version: 8.0
-      - name: Run tests & generate Coverage
-        run: bin/phpunit --configuration=phpunit.xml tests --coverage-html var/coverage --whitelist=src
-      - name: Store coverage files
-        uses: actions/upload-artifact@v2
-        with:
-          path: var/coverage
+          php-version: '8.2'
+          coverage: none
+      - name: Cs-Fixer
+        run: |
+            wget -q https://cs.symfony.com/download/php-cs-fixer-v3.phar -O php-cs-fixer
+            chmod a+x php-cs-fixer
+            PHP_CS_FIXER_IGNORE_ENV=true ./php-cs-fixer fix src --dry-run
 
   phpstan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
         with:
           path: '**/vendor'
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
-      - uses: php-actions/composer@v5
+      - uses: php-actions/composer@v6
         with:
           args: --prefer-dist
-          php_version: 8.0
+          php_version: '8.2'
       - name: PHPStan
-        uses: php-actions/phpstan@v2
+        uses: php-actions/phpstan@v3
         with:
           path: src/
-          level: 4
-          php_version: 8.0
+          level: 3
+          php_version: '8.2'
