--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,19 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "psr/log": "^1.1",
-        "php-etl/bucket": "^0.2.0",
-        "php-etl/pipeline-contracts": "^0.3.0",
-        "php-etl/bucket-contracts": "^0.1.0"
+        "php-etl/bucket": "^0.3.0",
+        "php-etl/pipeline-contracts": "^0.4.0",
+        "php-etl/bucket-contracts": "^0.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "johnkary/phpunit-speedtrap": "*",
-        "mybuilder/phpunit-accelerator": "*",
-        "phpunit/php-invoker": "*"
+        "phpunit/php-invoker": "^4.0",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "infection/infection": "^0.26.18",
+        "rector/rector": "^0.15"
     },
     "provide": {
         "php-etl/pipeline-implementation": "0.3.0"
@@ -42,11 +44,14 @@
         }
     },
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "allow-plugins": {
+            "infection/extension-installer": true
+        }
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "0.4.x-dev"
+            "dev-main": "0.5.x-dev"
         }
     }
 }
