--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "require": {
         "php": "^8.2",
         "psr/log": "^1.1",
-        "php-etl/bucket": "^0.3.0",
-        "php-etl/pipeline-contracts": "^0.4.0",
-        "php-etl/bucket-contracts": "^0.2.0"
+        "php-etl/bucket": "*",
+        "php-etl/pipeline-contracts": "0.4.0",
+        "php-etl/bucket-contracts": "0.2.0"
     },
     "require-dev": {
         "phpunit/php-invoker": "^4.0",
