--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "php": "^8.2",
         "psr/log": "^3.0",
         "php-etl/bucket": "*",
-        "php-etl/pipeline-contracts": "0.4.0",
-        "php-etl/bucket-contracts": "0.2.0"
+        "php-etl/pipeline-contracts": "0.4.*",
+        "php-etl/bucket-contracts": "0.2.*"
     },
     "require-dev": {
         "phpunit/php-invoker": "^4.0",
