--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^8.2",
         "psr/log": "^3.0",
         "php-etl/bucket": "*",
-        "php-etl/pipeline-contracts": "0.4.*",
+        "php-etl/pipeline-contracts": "0.5.*",
         "php-etl/bucket-contracts": "0.2.*"
     },
     "require-dev": {
@@ -31,7 +31,7 @@
         "rector/rector": "^0.15"
     },
     "provide": {
-        "php-etl/pipeline-implementation": "0.3.0"
+        "php-etl/pipeline-implementation": "0.5.0"
     },
     "autoload": {
         "psr-4": {
@@ -46,12 +46,13 @@
     "config": {
         "bin-dir": "bin",
         "allow-plugins": {
-            "infection/extension-installer": true
+            "infection/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "0.5.x-dev"
+            "dev-main": "0.6.x-dev"
         }
     }
 }
