--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,14 @@
         "php": "^8.2",
         "psr/log": "^3.0",
         "php-etl/bucket": "*",
-        "php-etl/pipeline-contracts": "0.5.*"
+        "php-etl/pipeline-contracts": "0.5.*",
+        "php-etl/bucket-contracts": "0.3.*"
     },
     "require-dev": {
         "phpunit/php-invoker": "^4.0",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.0",
-        "friendsofphp/php-cs-fixer": "^3.0",
+        "friendsofphp/php-cs-fixer": "^3.38",
         "infection/infection": "^0.26.18",
         "rector/rector": "^0.15"
     },
